--- a/time-off-management/src/main/resources/static/css/app.css
+++ b/time-off-management/src/main/resources/static/css/app.css
@@ -99,35 +99,94 @@ main {
 	border-radius: 10px;
 }
 
-.card {
-	background-color: #353535;
-	border:1px solid whitesmoke;
-	margin-bottom: 20px;
-	border-radius: 15px;
-	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-	transition: transform 0.3s, box-shadow 0.3s;
-}
 
-.card:hover {
-	transform: translateY(-10px);
-	box-shadow: 0 12px 24px rgba(0, 0, 0, 0.5);
-}
+        .card {
+            position: relative;
+            background: #1e1e1e;
+            border-radius: 12px;
+            box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+            overflow: hidden;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            width: 300px;
+            border: 1px solid #6200ea;
+        }
 
-.card-body {
-	padding: 20px;
-}
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.7);
+        }
 
-.card-title {
-	color: black;
-	font-weight: bold;
-	font-size: 1.25rem;
-	margin-bottom: 15px;
-}
+        .card-header {
+            display: flex;
+            align-items: center;
+            background: #6200ea;
+            padding: 15px;
+            border-bottom: 1px solid #6200ea;
+        }
 
-.card-text strong {
-	color: #ecf0f1;
-}
+        .card-header img {
+            width: 35px;
+            height: 35px;
+            margin-right: 10px;
+            border-radius: 50%;
+        }
 
+        .card-title {
+            font-size: 20px;
+            color: #fff;
+            text-transform: uppercase;
+            letter-spacing: 1.5px;
+        }
+
+        .card-body {
+            padding: 15px;
+        }
+
+        .card-text {
+            font-size: 14px;
+            margin-bottom: 10px;
+            color: #d1d1d1;
+        }
+
+        .card-text strong {
+            color: #9b59b6;
+        }
+
+        .dropdown {
+            margin-top: 10px;
+        }
+
+        .dropdown select {
+            background: #1e1e1e;
+            color: #d1d1d1;
+            border: 1px solid #6200ea;
+            padding: 5px;
+            border-radius: 5px;
+            width: 100%;
+        }
+
+        .card-footer {
+            padding: 10px 15px;
+            background: #1e1e1e;
+            border-top: 1px solid #6200ea;
+            text-align: right;
+        }
+
+        .card-footer button {
+            background-color: #6200ea;
+            color: #fff;
+            border: none;
+            padding: 5px 10px;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-left: 5px;
+        }
+
+        @media (max-width: 768px) {
+            .card {
+                width: 100%;
+            }
+        }
 .status-dropdown {
 	margin-top: 15px;
 }
@@ -152,7 +211,7 @@ main {
 }
 
 .container h1 {
-	color: #ffeb3b;
+	color: gray;
 	margin-bottom: 30px;
 	text-align: center;
 	font-size: 2rem;
