--- a/time-off-management/src/main/resources/templates/layouts/admin-board.html
+++ b/time-off-management/src/main/resources/templates/layouts/admin-board.html
@@ -24,6 +24,9 @@
 	display: none;
 }
 </style>
+<script>
+	
+</script>
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script>
         $(document).ready(function() {
@@ -89,6 +92,7 @@
             
             
         }
+        
 
         function checkSelected() {
             var checkboxes = document.querySelectorAll('.checkbox-column input[type="checkbox"]:checked');
@@ -110,7 +114,12 @@
         }
 
         window.onload = initializeCheckboxes;
-    </script>
+		
+        
+	</script>
+        
+    
+   
 
 
 </head>
