--- a/time-off-management/src/main/resources/templates/department-list.html
+++ b/time-off-management/src/main/resources/templates/department-list.html
@@ -231,7 +231,7 @@ main {
 							th:attr="data-bs-target='#exampleModal' + ${department.code}"
 							class="btn-secondary assign-manager-btn"
 							th:if="${department.managerCode == null}"
-							data-department-code="${department.code}">Assign Manager</button>
+							data-department-code="${department.code}">Assign HOD</button>
 						<button type="button" data-bs-toggle="modal"
 							th:attr="data-bs-target='#exampleModal' + ${department.code}"
 							class="btn-secondary update-manager-btn"
@@ -239,14 +239,14 @@ main {
 							data-department-code="${department.code}"
 							data-manager-code="${department.managerCode}"
 							data-manager-name="${department.managerName}"
-							data-manager-phone="${department.managerPhone}">Update Manager</button>
+							data-manager-phone="${department.managerPhone}">Update HOD</button>
 						<!-- Modal -->
 						<div class="modal fade" th:id="'exampleModal' + ${department.code}" tabindex="-1"
 							aria-labelledby="exampleModalLabel" aria-hidden="true">
 							<div class="modal-dialog">
 								<div class="modal-content">
 									<div class="modal-header">
-										<h5 class="modal-title" id="exampleModalLabel">Update Manager</h5>
+										<h5 class="modal-title" id="exampleModalLabel">Update HOD</h5>
 										<button type="button" class="btn-close"
 											data-bs-dismiss="modal" aria-label="Close"></button>
 									</div>
@@ -257,7 +257,7 @@ main {
 												<input type="hidden" id="departmentCode"
 													name="departmentCode" th:value="${department.code}">
 												<div class="form-group mb-3">
-													<h5 class="px-2" style="color: white">Manager Code</h5>
+													<h5 class="px-2" style="color: white">HOD Code</h5>
 													<input type="text" class="form-control" id="headCode" name="headCode" th:value="${headCode}" placeholder="Code">
 												</div>
 												<button type="submit" class="btn btn-primary">Save changes</button>
