--- a/time-off-management/src/main/resources/templates/admin-home.html
+++ b/time-off-management/src/main/resources/templates/admin-home.html
@@ -20,9 +20,9 @@
 		<header class="margin-left" th:fragement="header">
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="m-4">
-					<h1 class="text-white d-lg-inline mb-4">Leave Requests</h1>
-					<h6 class="text-muted d-none d-lg-block mt-3">Approve or
-						reject leave requests</h6>
+					<h1 style="color:#000;" class="d-lg-inline mb-4">Leave Requests</h1>
+					<h6 style="color:#000;" class="text-muted d-none d-lg-block mt-3">Here're your
+						leave requests</h6>
 				</div>
 				<div class="flex-fill"></div>
 
@@ -38,7 +38,7 @@
 							<div class="m-3 text-container">
 								<div class="text-content">
 
-									<h5 class="font-bold text-truncate" style="color: white">
+									<h5 class="font-bold text-truncate" style="color: #000">
 										<span th:text="${name}"></span>
 									</h5>
 									<h6 class="text-muted mb-0 text-truncate">
@@ -63,7 +63,7 @@
 
 		<div class="row px-5 mt-4">
 			<div class="form-group search">
-				<input type="text" class="form-control" placeholder="Search leaves">
+				<input type="text" class="form-control" style="background-color:#95d2b3" placeholder="Search leaves">
 			</div>
 
 		</div>
@@ -75,7 +75,7 @@
 					<div class="col-md-4"
 						th:each="leaveApplication : ${leaveApplications}">
 						<div class="card">
-							<div class="card-header">
+							<div class="card-header" style="background-color:#55ad9b";>
 								<img src="https://th.bing.com/th/id/OIP.7-nrY0zazKLS9ishJd-17wHaGh?w=164&h=180&c=7&r=0&o=5&dpr=1.3&pid=1.7" alt="User Icon">
 								<h5 class="card-title">Leave Request</h5>
 							</div>
@@ -104,8 +104,8 @@
 									<strong>Remark:</strong> <span
 										th:text="${leaveApplication.remark}"></span>
 								</p>
-								<div class="card-footer">
-								<div class="status-dropdown">
+								<div class="card-footer" style="background-color:#d8efd3";>
+								<div class="status-dropdown" style="background-color:#55ad9b";>
 									<select
 										id="statusSelect" class="form-control"
 										th:data-id="${leaveApplication.id}"
