--- a/time-off-management/src/main/resources/templates/fragments/sidebar.html
+++ b/time-off-management/src/main/resources/templates/fragments/sidebar.html
@@ -5,8 +5,7 @@
     <nav th:fragment="sidebar"  class="sidebar ">
     	
         <div class="brand">
-            <img th:src="@{/images/letter-l-icon-17.jpg}" class="brand-logo" alt="Profile Picture">
-            <span class="brand-name" style="color: gray;">Linn</span>
+            <span class="brand-name" style="color: dark;">TIME-OFF</span>
         </div>
         
      
