--- a/time-off-management/src/main/resources/templates/leave-request.html
+++ b/time-off-management/src/main/resources/templates/leave-request.html
@@ -16,8 +16,8 @@
 		<header class="margin-left" th:fragement="header" >
 			<nav class="navbar navbar-expand-lg navbar-light">
 				<div class="m-4">
-					<h1 class="text-white d-lg-inline mb-4">Leave Requests</h1>
-					<h6 class="text-muted d-none d-lg-block mt-3">Here're your
+					<h1 style="color:#000;" class="d-lg-inline mb-4">Leave Requests</h1>
+					<h6 style="color:#000;" class="text-muted d-none d-lg-block mt-3">Here're your
 						leave requests</h6>
 				</div>
 				<div class="flex-fill"></div>
