--- a/time-off-management/src/main/resources/static/css/sidebar.css
+++ b/time-off-management/src/main/resources/static/css/sidebar.css
@@ -1,6 +1,6 @@
  .sidebar {
- 	background-color: #2d3340;
- 	color: #ffffff;
+ 	background-color: #95d2b3;
+ 	color: #55ad9b;
  	width: 250px;
  	height: 100%;
  	position: fixed;
@@ -41,7 +41,7 @@
 
  .brand-name {
  	font-size: 20px;
- 	color: #b388ff;
+ 	color: #000;
  	margin: 0;
  }
 
@@ -56,7 +56,7 @@
  	align-items: center;
  	padding: 10px 20px;
  	text-decoration: none;
- 	color: #bdc3c7;
+ 	color: #000;
  	transition: all 0.3s ease;
  }
 
