--- a/time-off-management/src/main/resources/templates/create-department.html
+++ b/time-off-management/src/main/resources/templates/create-department.html
@@ -15,8 +15,8 @@ body {
 	margin: 0;
 	padding: 0;
 	font-family: 'Roboto', sans-serif;
-	background: linear-gradient(135deg, #2c3e50, #000000);
-	color: #ffffff;
+	background-color: #d8efd3;
+	color: #000;
 }
 
 main {
@@ -34,21 +34,21 @@ main {
 	max-width: 600px;
 	margin: 0 auto;
 	padding: 20px;
-	background-color: #2d3340;
+	background-color: #D8EFD3;
 	border-radius: 10px;
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
 }
 
 .form-container h1 {
 	text-align: center;
-	color: gray;
+	color: #000;
 	margin-bottom: 20px;
 }
 
 .form-container label {
 	display: block;
 	margin-bottom: 5px;
-	color: #ffffff;
+	color: #000;
 }
 
 .form-container input, .form-container textarea {
@@ -57,12 +57,12 @@ main {
 	margin-bottom: 10px;
 	border: 1px solid #444;
 	border-radius: 5px;
-	background-color: #141515;
-	color: #ffffff;
+	background-color: #d8efd3;
+	color: #000;
 }
 
 .form-container input:focus, .form-container textarea:focus {
-	background-color: rgb(26, 26, 27);
+	background-color: #d8efd3;
 	border-color: #6200ea;
 	box-shadow: 0 0 0 0.25rem rgba(98, 0, 234, 0.25);
 }
@@ -70,8 +70,8 @@ main {
 .form-container button {
 	width: 100%;
 	padding: 10px;
-	background-color: #6200ea;
-	color: #ffffff;
+	background-color: #95d2b3;
+	color: #000;
 	border: none;
 	border-radius: 5px;
 	cursor: pointer;
@@ -79,11 +79,12 @@ main {
 }
 
 .form-container button:hover {
-	background-color: #4b00b2;
+	background-color: #000;
+	color: #fff;
 }
 
 .form-container .error {
-	color: #ff6b6b;
+	color: #d8efd3;
 	font-size: 0.875em;
 	margin-bottom: 5px;
 	display:block;
@@ -101,13 +102,13 @@ main {
 }
 
 .header h1 {
-	color: #d3d4d6;
+	color: #55ad9b;
 	font-size: 36px;
 	margin-bottom: 10px;
 }
 
 .header h2 {
-	color: #d3d4d6;
+	color: #000;
 	font-size: 24px;
 }
 </style>
