--- a/time-off-management/src/main/resources/templates/create-position.html
+++ b/time-off-management/src/main/resources/templates/create-position.html
@@ -11,8 +11,8 @@
 <style>
 body {
 	font-family: Arial, sans-serif;
-	background-color: #1e1e1e;
-	color: #d3d3d3;
+	background-color: #d8efd3;
+	color: #55ad9b;
 }
 
 .header {
@@ -23,11 +23,11 @@ body {
 
 .brand-title {
 	font-size: 24px;
-	color: #4da8da;
+	color: #55ad9b;
 }
 
 .form-container {
-	background-color: #2d2d2d;
+	background-color: #d8efd3;
 	padding: 30px;
 	border-radius: 10px;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
@@ -36,26 +36,26 @@ body {
 }
 
 .form-group label {
-	color: #4da8da;
+	color: #55ad9b;
 }
 
 .form-control {
-	background-color: #333;
-	border: 1px solid #4da8da;
+	background-color: #d8efd3;
+	border: 1px solid #55ad9b;
 	color: #d3d3d3;
 }
 
 .form-control:hover {
-	background-color: gray;
+	background-color: #000;
 }
 
 .form-control:focus {
-	background-color: gray;
+	background-color: #000;
 }
 
 .btn-submit {
-	background-color: #4da8da;
-	color: white;
+	background-color: #d8efd3;
+	color: #55ad9b;
 	border: none;
 	padding: 12px 30px;
 	border-radius: 5px;
@@ -66,13 +66,14 @@ body {
 }
 
 .btn-submit:hover {
-	background-color: #388bb5;
+	background-color: #000;
+	color: #fff;
 	transform: scale(1.05);
 }
 
 .btn-back {
-	background-color: #333;
-	color: #d3d3d3;
+	background-color: #d8efd3;
+	color: #55ad9b;
 	border: none;
 	padding: 12px 30px;
 	border-radius: 5px;
@@ -83,7 +84,8 @@ body {
 }
 
 .btn-back:hover {
-	background-color: #444;
+	background-color: #000;
+	color: #fff;
 	transform: scale(1.05);
 }
 
@@ -98,7 +100,7 @@ body {
 	<section layout:fragment="content">
 		<div class="container mt-4">
 			<header class="header">
-				<h1 class="brand-title">Enter new position details</h1>
+				<h1 class="brand-title" style="color:#000;">Enter new position details</h1>
 			</header>
 			<div class="form-container">
 				<form th:action="@{/positions}" th:object="${positionForm}"
@@ -143,7 +145,7 @@ body {
 							th:errors="*{anualLeaves}" class="text-danger"></div>
 					</div>
 					<div class="btn-container">
-						<button type="submit" class="btn-submit">
+						<button type="submit" class="btn-submit" style="background-color: #55ad9b; color:#000;">
 							<i class="fas fa-save"></i> Save
 						</button>
 						<a href="/positions" class="btn-back"><i
