--- a/time-off-management/src/main/resources/templates/employee-list.html
+++ b/time-off-management/src/main/resources/templates/employee-list.html
@@ -12,11 +12,11 @@
 <style>
 body {
 	font-family: Arial, sans-serif;
-	background-color: #f4f4f4;
+	background-color: #d8efd3;
 }
 
 .header {
-	color: gray;
+	color: #000;
 	text-align: center;
 	margin-bottom: 20px;
 }
@@ -32,27 +32,27 @@ body {
 }
 
 .search-container input {
-	background-color: #2d3340;
-	color: white;
+	background-color: #d8efd3;
+	color: #000;
 	padding-left: 40px; /* Adjust the padding to make space for the icon */
 	width: 100%;
 	height: 40px; /* Adjust the height as needed */
-	border: none;
-	border-radius: 5px;
+	border: 1px solid #000;
+	border-radius: 15px;
 }
 
 .search-container .fas {
 	position: absolute;
 	left: 23px;
-	color: white;
+	color: #000;
 }
 
 #employee-table {
 	width: 100%;
 	border-collapse: collapse;
 	margin-top: 35px;
-	color: #fff;
-	background-color: #6200ea;
+	color: #000;
+	background-color: #d8efd3;
 	border-radius: 10px;
 	overflow: hidden;
 	box-shadow: 0 4px 10px rgba(0, 0, 0, 0.5);
@@ -65,30 +65,30 @@ body {
 }
 
 #employee-table th {
-	background-color: #6200ea;
-	color: #ffffff;
+	background-color: #55ad9b;
+	color: #000;
 	font-weight: 500;
 	text-transform: uppercase;
 }
 
 #employee-table tbody tr:nth-child(odd) {
-	background-color: #3b4351;
+	background-color: #d8efd3;
 }
 
 #employee-table tbody tr:nth-child(even) {
-	background-color: #2d3340;
+	background-color: #d8efd3;
 }
 
 #employee-table tbody tr:hover {
-	background-color: #6200ea;
+	background-color: #000;
 	color: #ffffff;
 	cursor: pointer;
 }
 
 .btn-create {
 	margin-left: 10px;
-	background-color: #4e5d6c;
-	color: white;
+	background-color: #55ad9b;
+	color: #000;
 	border: none;
 	padding: 10px 20px;
 	border-radius: 5px;
@@ -98,15 +98,15 @@ body {
 }
 
 .btn-create:hover {
-	background-color: #2d3340;
+	background-color: #000;
 	color: white;
 	transform: scale(1.05);
 }
 
 .btn-delete {
 	margin-left: 10px;
-	background-color: #4e5d6c;
-	color: white;
+	background-color: #55ad9b;
+	color: #000;
 	border: none;
 	padding: 8px 20px;
 	border-radius: 5px;
@@ -117,8 +117,8 @@ body {
 
 .btn-select {
 	margin-left: 10px;
-	background-color: #4e5d6c;
-	color: white;
+	background-color: #55ad9b;
+	color: #000;
 	border: none;
 	padding: 8px 20px;
 	border-radius: 5px;
@@ -144,13 +144,13 @@ body {
 }
 
 .btn-select-active {
-	background-color: #6200ea; /* Highlight color */
+	background-color: #d8efd3; /* Highlight color */
 }
 
 .btn-create {
 	margin-left: 10px;
-	background-color: #4e5d6c;
-	color: white;
+	background-color: #55ad9b;
+	color: #000;
 	border: none;
 	padding: 10px 20px;
 	border-radius: 5px;
@@ -168,8 +168,8 @@ body {
 	<section layout:fragment="content">
 		<div class="container mt-4">
 			<header class="header">
-				<h1>Linn</h1>
-				<h2 class="brand-title">Employee Management</h2>
+				<h1 style="color:#000;">TIME-OFF</h1>
+				<h2 class="brand-title" style="color:#000;">Employee Management</h2>
 			</header>
 			<div class="row mb-4">
 				<div class="col-9 form-group search-container">
