--- a/time-off-management/src/main/resources/templates/leave-application.html
+++ b/time-off-management/src/main/resources/templates/leave-application.html
@@ -20,16 +20,16 @@
 }
 
 .header, .footer {
-	background-color: #141421;
+	background-color: #d8efd3;
 	padding: 10px;
 	text-align: center;
-	color: #ffffff;
+	color: #55ad9b;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
 	margin-bottom: 20px;
 }
 
 .container {
-	background-color: #28293d;
+	background-color: #d8efd3;
 	border-radius: 12px;
 	box-shadow: 0 8px 16px rgba(0, 0, 0, 0.5);
 	transition: transform 0.3s, box-shadow 0.3s;
@@ -45,14 +45,14 @@
 
 h1 {
 	text-align: center;
-	color: #ffffff;
+	color: #000;
 	margin-bottom: 20px;
 }
 
 label {
 	display: block;
 	margin-top: 20px;
-	color: #b3b3b3;
+	color: #55ad9b;
 	font-weight: 700;
 }
 
@@ -60,17 +60,17 @@ input, select, textarea {
 	width: calc(100% - 30px);
 	padding: 15px;
 	margin-top: 10px;
-	background-color: #333344;
-	border: 1px solid #555577;
+	background-color: #d8efd3;
+	border: 1px solid #000;
 	border-radius: 8px;
-	color: #ffffff;
+	color: #55ad9b;
 	font-size: 16px;
 	transition: background-color 0.3s, border-color 0.3s;
 }
 
 input:focus, select:focus, textarea:focus {
-	background-color: #3a3a50;
-	border-color: #777799;
+	background-color: #d8efd3;
+	border-color: #55ad9b;
 	outline: none;
 }
 
@@ -91,20 +91,20 @@ input:focus, select:focus, textarea:focus {
 	width: 30%;
 	text-align: center;
 	padding: 10px;
-	background-color: #333344;
+	background-color: #95d2b3;
 	border-radius: 8px;
 	transition: background-color 0.3s;
 }
 
 .progress-step.active {
-	background-color: #6200ea;
+	background-color: #d8efd3;
 }
 
 .tooltip .tooltiptext {
 	visibility: hidden;
 	width: 200px;
-	background-color: #333344;
-	color: #ffffff;
+	background-color: #d8efd3;
+	color: #55ad9b;
 	text-align: center;
 	border-radius: 6px;
 	padding: 5px 0;
@@ -126,10 +126,10 @@ button {
 	width: calc(100% - 30px);
 	padding: 15px;
 	margin-top: 30px;
-	background-color: #6200ea;
+	background-color: #55ad9b;
 	border: none;
 	border-radius: 8px;
-	color: white;
+	color: #000;
 	font-size: 18px;
 	font-weight: 700;
 	cursor: pointer;
@@ -137,25 +137,25 @@ button {
 }
 
 button:hover {
-	background-color: #6200ea;
+	background-color: #000;
 	transform: translateY(-2px);
 }
 
 button:active {
-	background-color: #6200ea;
+	background-color: #55ad9b;
 	transform: translateY(0);
 }
 
 .leave-balance, .recent-leaves {
-	background-color: #333344;
+	background-color: #d8efd3;
 	padding: 20px;
 	border-radius: 8px;
 	margin: 10px 0;
-	color: #ffffff;
+	color: #55ad9b;
 }
 
 .leave-balance h2, .recent-leaves h2 {
-	color: #ffffff;
+	color: #000;
 	margin-bottom: 10px;
 }
 
@@ -166,7 +166,7 @@ button:active {
 
 .leave-balance li, .recent-leaves li {
 	padding: 10px;
-	border-bottom: 1px solid #555577;
+	border-bottom: 1px solid #000;
 }
 
 .leave-balance li:last-child, .recent-leaves li:last-child {
@@ -180,8 +180,8 @@ button:active {
 }
 
 .progress-step.active {
-	background-color: #6200ea;
-	color: white;
+	background-color: #55ad9b;
+	color: #000;
 }
 
 .step-content {
@@ -194,25 +194,25 @@ button:active {
 
 #step2 {
 	padding: 20px;
-	background-color: #28293d;
+	background-color: #d8efd3;
 	border-radius: 8px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 #step2 h2 {
-	color: white;
+	color: #55ad9b;
 	margin-bottom: 15px;
 }
 
 #step2 p {
-	color: white;
+	color: #95d2b3;
 	margin-bottom: 20px;
 }
 
 .review-details {
 	padding: 15px;
-	background-color: #28293d;
-	border: 1px solid #ddd;
+	background-color: #d8efd3;
+	border: 1px solid #000;
 	border-radius: 4px;
 	margin-bottom: 20px;
 }
@@ -229,34 +229,34 @@ button:active {
 	cursor: pointer;
 	font-size: 16px;
 	transition: background-color 0.3s ease, box-shadow 0.3s ease;
-	color: #fff;
+	color: #55adb3;
 }
 
 .btn-secondary {
-	background: linear-gradient(145deg, #575757, #6c6c6c);
+	background: #d8efd3;
 }
 
 .btn-secondary:hover {
-	background: linear-gradient(145deg, #474747, #5c5c5c);
+	background: #000;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .btn-primary {
-	background: linear-gradient(145deg, #6200ea, #3700b3);
+	background: #000;
 }
 
 .btn-primary:hover {
-	background: linear-gradient(145deg, #5f00d7, #34009b);
+	background: #000;
 	box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 .confirmation-message {
 	padding: 15px;
-	background-color: #444;
-	border: 1px solid #555;
+	background-color: #d8efd3;
+	border: 1px solid #000;
 	border-radius: 4px;
 	margin-bottom: 20px;
-	color: #fff;
+	color: #55ad9b;
 }
 
 .alert {
@@ -271,12 +271,9 @@ button:active {
 	<section layout:fragment="content">
 
 
-		<div class="main-content">
-			<div class="header">
-				<h1>Leave Payroll System</h1>
-			</div>
+		
 			<div class="container">
-				<h1 style="color: gray">Leave Request</h1>
+				<h1 style="color: #000">Leave Request</h1>
 				<div class="progress-tracker">
 					<div id="step1-indicator" class="progress-step active">Step
 						1: Details</div>
@@ -337,7 +334,6 @@ button:active {
 				</form>
 			</div>
 
-		</div>
 
 		<script>
     const step1 = document.getElementById('step1');
